# my-python-project-CheekAI

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  backend_entry.py  create_icon.py  index.html  package-lock.json  package.json  test_paragraph.py  vite.config.ts
backend/: requirements.txt
backend/app/: preprocess.py  schemas.py  service.py
backend/config/: api_config.json
desktop/: package-lock.json  preload.js
desktop/renderer/: index.js  style.css
docs/: IMPLEMENTATION_PLAN.md  MIGRATION_RUST_TAURI.md  PROJECT_DOCUMENTATION.md  detection_algorithm.md  dev_speed.md  handover_mechanisms.md  sentence_segmentation.md  ui-spec.md  算法优化建议
legacy-python-electron/: start.py  test_dual_detection_integration.py
legacy-python-electron/desktop/: main.js  package.json
legacy-python-electron/docs/: KNOWN_ISSUES.md  handover_mechanisms.md
legacy-python-electron/scripts/: inspect_split.py  temp_fix_service.py  verify_paragraphs.py
scripts/: archive_glm_response.py  dev-onekey.ps1  inspect_punct.py  tauri-dev-reuse.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: config_store.rs  mod.rs  providers.rs  sentence_segmenter.rs  text_processor.rs
src-tauri/src/services/detection/: aggregation.rs  comparison.rs  content_filter.rs  dual_mode.rs  llm_analyzer.rs  mod.rs  segment_builder.rs  sensitivity.rs  subject_catalog.rs
src/components/: ControlPanel.vue  LoadingMask.vue  ResultsPanel.vue  TextInput.vue  (+3 more)
(+69 files in other folders)
