[package]
name = "cheekAI"
version = "0.1.0"
description = "AI-generated text detection desktop application"
authors = ["CheekAI Team"]
edition = "2021"
default-run = "cheekAI"

[lib]
name = "cheek_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
docx-rs = "0.4"
zip = "2"
pdf-extract = "0.7"  # PDF text extraction
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
